<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>com.enterprise</groupId>
    <artifactId>kb-rag-agent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>企业知识库 RAG Agent 工作台</name>
    <description>Enterprise Knowledge Base RAG Agent Workbench</description>

    <modules>
        <module>kb-commons</module>
        <module>kb-domain</module>
        <module>kb-infrastructure</module>
        <module>kb-etl</module>
        <module>kb-ai-core</module>
        <module>kb-ai-agent</module>
        <module>kb-api</module>
        <module>kb-admin</module>
        <module>kb-eval</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-ai.version>2.0.0</spring-ai.version>
        <testcontainers.version>1.20.1</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- victools jsonschema-module-jackson：spring-ai-bom 未管理此件，
                 openai-java SDK 传递的 4.38.0 会以最短路径优先覆盖 spring-ai 的 5.0.0，
                 致 .entity() 结构化输出 NoClassDefFoundError: JacksonSchemaModule。
                 5.0.0 自带旧名 JacksonModule 兼容垫片，且 openai-java 字节码不引用此模块（已核验） -->
            <dependency>
                <groupId>com.github.victools</groupId>
                <artifactId>jsonschema-module-jackson</artifactId>
                <version>5.0.0</version>
            </dependency>

            <!-- Internal Modules -->
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-etl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-ai-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.enterprise</groupId>
                <artifactId>kb-ai-agent</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
